[gd_scene load_steps=3 format=3 uid="uid://c2xi3w8srrklv"]

[ext_resource type="Script" path="res://Assets/Player/Weapons/ProjectileWeapons/Tornado/tornado.gd" id="1_75p3w"]
[ext_resource type="PackedScene" uid="uid://c64vcfy75htnr" path="res://Assets/Utility/Weapons/projectile_spawner.tscn" id="2_urbbg"]

[node name="Tornado" type="Node2D"]
script = ExtResource("1_75p3w")

[node name="ProjectileSpawner" parent="." instance=ExtResource("2_urbbg")]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
